UPDATE: logic for getting codelist
Co-authored-by: shayany <shayan.yazdanmehr@nav.no>